<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#E8EAF6"
    android:orientation="vertical"
    tools:context=".ui.activities.neighbour_detail.NeighbourDetailActivity">


    <ImageView
        android:id="@+id/user_img"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back_white_18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/Blank"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_img"
        tools:text="Fadel" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_float_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@null"
        android:layout_marginTop="156dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/Blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/Blank"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/user_img"
        tools:layout_editor_absoluteX="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/presenter_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/user_img">

            <TextView
                android:id="@+id/second_username_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Fadel" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FBFCFA"
                app:layout_constraintTop_toBottomOf="@id/second_username_txt" />

            <ImageView
                android:id="@+id/location_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_location_on_24px"
                app:layout_constraintStart_toStartOf="@id/second_username_txt"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/location_img"
                app:layout_constraintStart_toEndOf="@+id/location_img"
                tools:text="@string/location_text" />

            <ImageView
                android:id="@+id/call_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_call_24px"
                app:layout_constraintStart_toStartOf="@id/second_username_txt"
                app:layout_constraintTop_toBottomOf="@id/location_img" />

            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/call_img"
                app:layout_constraintStart_toEndOf="@+id/call_img"
                tools:text="+33 6 86 57 90 14" />

            <ImageView
                android:id="@+id/internet_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_internet"
                app:layout_constraintStart_toStartOf="@id/second_username_txt"
                app:layout_constraintTop_toBottomOf="@id/call_img" />

            <TextView
                android:id="@+id/facebook_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/internet_img"
                app:layout_constraintStart_toEndOf="@+id/internet_img"
                tools:text="www.facebook.fr/caroline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/Blank"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_user"
        tools:layout_editor_absoluteX="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/about_me_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@android:color/secondary_text_dark"
                app:layout_constraintTop_toTopOf="parent"
                android:text="A propos de moi" />

            <View
                android:id="@+id/divider_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FBFCFA"
                app:layout_constraintTop_toBottomOf="@id/about_me_txt" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/about_me_txt"
                app:layout_constraintTop_toBottomOf="@id/about_me_txt"
                android:text="@string/about_me_txt" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
